# astraeusio

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile  build.rs
backend/.cargo/: audit.toml
backend/src/: anomaly.rs  api_keys.rs  astros.rs  auth.rs  db.rs  db_writer.rs  email_alerts.rs  iss.rs  mailer.rs  main.rs  nasa.rs  noaa.rs  oauth.rs  plan.rs  poller.rs  rate_limit.rs  routes.rs  starlink.rs  webhook_sender.rs  webhooks.rs
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/public/: index.md  openapi.json  robots.txt  sitemap.xml
frontend/public/.well-known/: api-catalog  http-message-signatures-directory  oauth-authorization-server  oauth-protected-resource
frontend/public/status/: feed.xml
frontend/scripts/: gen-blog-og.py  prerender-meta.mjs
frontend/src/: App.jsx  AuthPage.jsx  Root.jsx  i18n.js  index.css  main.jsx
frontend/src/blog/: posts.js
frontend/src/components/: AboutPage.jsx  AlertsList.jsx  AnomalyPanel.jsx  ApiKeysPage.jsx  ApodCard.jsx  AsteroidTable.jsx  BillingPage.jsx  BlogPage.jsx  BlogPostPage.jsx  CustomRulesPanel.jsx  DashboardPreview.jsx  DocsPage.jsx  DstChart.jsx  EpicViewer.jsx  EventsPage.jsx  ExoplanetStats.jsx  Footer.jsx  ForecastPage.jsx  ForecastPanel.jsx  HeroScene.jsx  ImfBzChart.jsx  IssPanel.jsx  KpChart.jsx  KpGauge.jsx  LandingPage.jsx  Logo.jsx  MetricCard.jsx  Navbar.jsx  NotFoundPage.jsx  Sidebar.jsx  (+13 more)
ml/: Dockerfile  download_kp.py  preprocess.py  requirements.txt  serve.py  train.py
(+13 files in other folders)
