[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
duckdb = { version = "1", features = ["bundled"] }
dotenvy = "0.15"
chrono = "0.4"
jsonwebtoken = "9"
bcrypt = "0.15"
rand = "0.8"
sha2 = "0.10"
dashmap = "6"
